# portfolioo141

./: .gitignore  README.md  fly.toml
.github/workflows/: deploy-to-oracle.yml  docker-image.yml  integrate-test.yaml
docs/: argocd.md  docker.md  github-actions.md  kubernetes.md
portfolio/: .dockerignore  .gitignore  Dockerfile  README.md  deployment.yaml  eslint.config.mjs  fly.toml  ingress.yaml  next.config.mjs  nginx.conf  package-lock.json  package.json  postcss.config.mjs  service.yaml
portfolio-be/: .env  .gitignore  Cargo.toml  Dockerfile
portfolio-be/src/: appstate.rs  blog_model.rs  db.rs  libs.rs  main.rs  project_model.rs
portfolio/app/: globals.css  layout.jsx  loading.jsx  page.jsx
portfolio/app/blog/: page.jsx
portfolio/app/blog/add/: page.jsx
portfolio/app/blog/view/: page.jsx
portfolio/app/contact/: page.jsx
portfolio/app/resume/: page.jsx
portfolio/app/work/: page.jsx
portfolio/components/: carousel.jsx  door.jsx  footer.jsx  header.jsx  mobile_nav.jsx  nav.jsx  page_transition.jsx  panel.jsx  photo.jsx  r2.jsx  reveal.jsx  social.jsx  stair_transition.jsx  stairs.jsx
portfolio/components/ui/: button.jsx  input.jsx  select.jsx  sheet.jsx  tabs.jsx  textarea.jsx
portfolio/public/assets/image/: Line.avif
