[package]
name = "portfolio-be"
version = "0.1.0"
edition = "2021"

[lib]
name = "be"
path = "src/libs.rs"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-actix-web = "0.54.0"
shuttle-runtime = "0.54.0"

chrono = {version = "0.4.40", features = ["serde"]}
mongodb = "3.2.3"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.140"

